<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Hanji</string>
    <string name="main_results_found">Results Found!</string>
    <string name="loading">Loading…</string>
    <string name="main_search_hint">Search in Korean or English…</string>
    <string name="frag_favorites_heading">Favorites</string>
    <!--Menu Titles-->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_bug">Report a Bug</string>
    <!--Preferences-->
    <string name="lucky_kor_false">Show all results during Korean searches</string>
    <string name="lucky_eng_false">Show all results during English searches</string>
    <string name="lucky_kor_true">Go to first result during Korean searches</string>
    <string name="lucky_eng_true">Go to first result during English searches</string>
    <string name="add_fav_hint">Favorite\'s name…</string>
    <string name="logo_text">한지 |Hanji</string>
    <!--Error Messages-->
    <string name="no_results_title">No Results</string>
    <string name="no_results_msg_eng">We couldn\'t find anything matching your search.</string>
    <string name="no_results_msg_kor">We couldn\'t find anything matching your search. You can use the conjugator, but the conjugations might not be accurate.</string>
    <string name="no_results_positive_btn">Use Conjugator</string>
    <!--Feedback Strings-->
    <string name="feed_title">How are you enjoying our app?</string>
    <string name="feed_form_title">How can we improve?</string>
    <string name="feed_form_hint">Tell us where we can improve</string>
    <string name="feed_rate_title">Rate us?</string>
    <string name="feed_rate_msg">"Glad to hear you're enjoying our app. Would you mind taking a moment to rate Hanji?"</string>
    <string name="feed_rate_sure">Sure</string>
    <string name="feed_rate_never">Never</string>
    <string name="feedback_sent">Feedback sent</string>
    <string name="feedback_sending">Sending feedback</string>
    <!--Maoni Activity-->
    <string name="email_label">Email (optional)</string>
    <string name="feedback_type_title">Select Feedback Type</string>
    <string name="bug_option">Found a Bug</string>
    <string name="new_feature_option">Suggesting a New Feature</string>
    <string name="other_option">Just Saying Hi</string>
    <!--Onboarding-->
    <string name="onboarding1_title">Hanji 2.0</string>
    <string name="onboarding1_desc">Welcome to Hanji 2.0! This new update adds a ton of new features and takes Hanji to the next level.</string>
    <string name="onboarding2_title">Honorifics</string>
    <string name="onboarding2_desc">All conjugations now have an honorific form. Click on the slider to switch between regular and honorific conjugations</string>
    <string name="onboarding3_title">Conjugation Info</string>
    <string name="onboarding3_desc">Get detailed information about a conjugation. Just click on any conjugation to see its details</string>
    <string name="finish_btn_text">Start Learning!</string>
    <!-- Conjugator Activity -->
    <string name="possible_stems">Possible stems</string>
    <string name="part_of_speech">Part of Speech</string>
    <string name="regularity">Regularity</string>
    <!-- Changelog -->
    <string name="changelog_title">What\'s New</string>
    <!--Other-->
    <string name="honorific">Honorific</string>
    <string name="see_entry">See Entry</string>
    <string name="honorific_forms">Honorific Forms</string>
    <string name="regular_forms">Regular Forms</string>
    <string name="menu_ad_free">Remove Ads</string>
    <string name="conj_seperator">:</string>
    <string name="empty_favorites">You don\'t have any favorites. Click on favorites in settings to make some.</string>
    <string name="wod_cant_connect">Can\'t connect to server</string>
    <!-- Suggestions -->
    <string name="suggestion_submit">Submit</string>
    <string name="menu_add">Add suggestion</string>
    <string name="suggestion_title">Enter at least one addition</string>
    <string name="suggestion_antonym">Antonym</string>
    <string name="suggestion_synonym">Synonym</string>
    <string name="suggestion_example_title">Example</string>
    <string name="suggestion_example_sentence">Korean sentence</string>
    <string name="suggestion_example_translation">English translation</string>
</resources>
